# Rabotin-M.A.-steam-recommender

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
fastapi_app/: Dockerfile  config.py  data_loader.py  main.py
fastapi_app/recommender/: hybrid.py
flask_app/: Dockerfile  alembic.ini  app.py  config.py  forms.py  models.py
flask_app/migrations/: env.py
flask_app/migrations/versions/: c29955259fac_initial_migration.py
flask_app/services/: recommender_client.py
flask_app/templates/: 404.html  base.html  history.html  index.html  login.html  recommend.html  register.html
tests/: test_api.py
