[project]
name = "semestr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "implicit>=0.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
    "flask-wtf>=1.2.0",
    "flask-sqlalchemy>=3.1.0",
    "email-validator>=2.1.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "commitizen>=3.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.11"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"